force-app/main/default/objects/numm__Relance__c/numm__Relance__c.object-meta.xml
<CustomObject>
    <label>Relance</label>
    <nameField>
        <displayFormat>R-{YY}{MM}-{0000}</displayFormat>
        <label>Numéro de Relance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>