force-app/main/default/objects/numm__Relance__c/fields/numm__Contact__c.field-meta.xml
<CustomField>
    <fullName>numm__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relances</relationshipLabel>
    <relationshipName>Relances</relationshipName>
    <type>Lookup</type>
</CustomField>