force-app/main/default/objects/numm__Relance__c/fields/numm__Etape_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Etape_de_relance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Etape de relance</label>
    <referenceTo>numm__Etape_de_relance__c</referenceTo>
    <relationshipLabel>Relances</relationshipLabel>
    <relationshipName>Relances</relationshipName>
    <type>Lookup</type>
</CustomField>