force-app/main/default/objects/numm__Relance__c/fields/numm__IdExterne__c.field-meta.xml
<CustomField>
    <fullName>numm__IdExterne__c</fullName>
    <externalId>true</externalId>
    <label>IdExterne</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>