force-app/main/default/objects/numm__Relance__c/fields/numm__idPdf__c.field-meta.xml
<CustomField>
    <fullName>numm__idPdf__c</fullName>
    <label>idPdf</label>
    <length>30</length>
    <type>Text</type>
</CustomField>