force-app/main/default/objects/numm__Relance__c/fields/numm__IdPrint__c.field-meta.xml
<CustomField>
    <fullName>numm__IdPrint__c</fullName>
    <label>IdPrint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>