force-app/main/default/objects/numm__Relance__c/fields/numm__Niveau_de_la_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Niveau_de_la_relance__c</fullName>
    <label>Niveau de la relance</label>
    <type>TextArea</type>
</CustomField>