force-app/main/default/objects/numm__Relance__c/fields/numm__Role_du_Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Role_du_Tiers__c</fullName>
    <label>Role du Tiers</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Relances</relationshipLabel>
    <relationshipName>Relances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>