force-app/main/default/objects/numm__Relance__c/fields/numm__Statut_Maileva__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut_Maileva__c</fullName>
    <label>Statut Maileva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A envoyer</fullName>
            </value>
            <value>
                <fullName>En attante d&#39;envoie</fullName>
            </value>
            <value>
                <fullName>Envoie en cours</fullName>
            </value>
            <value>
                <fullName>Envoyé</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>