force-app/main/default/objects/numm__Relance__c/fields/numm__Texte_du_courrier__c.field-meta.xml
<CustomField>
    <fullName>numm__Texte_du_courrier__c</fullName>
    <label>Texte du courrier</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>